--- a/_posts/2000-01-03-month.md
+++ b/_posts/2000-01-03-month.md
@@ -68,6 +68,8 @@ fa-icon: line-chart
 
 </table>
 
+{% include adsenseDisplay.html %}
+
 <center><button id="btnm" onclick="cal()">계산</button></center>
 
 <table id = "resultTableM">
