--- a/_posts/2000-01-04-week.md
+++ b/_posts/2000-01-04-week.md
@@ -66,6 +66,8 @@ fa-icon: line-chart
 
 </table>
 
+{% include adsenseDisplay.html %}
+
 <center><button id="btnw" onclick="cal()">계산</button></center>
 
 <table id = "resultTableW">
