--- a/_posts/2000-01-05-day.md
+++ b/_posts/2000-01-05-day.md
@@ -68,6 +68,8 @@ fa-icon: line-chart
 
 </table>
 
+{% include adsenseDisplay.html %}
+
 <center><button id="btnd" onclick="cal()">계산</button></center>
 
 <table id = "resultTableD">
